--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1530,6 +1530,104 @@
       "8319.47 self.buy_entry_price\n",
       "8208.99 current close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 8545.65188274799\n",
+      " Lookback = 30_TCN Prediction = 8405.225742633334\n",
+      " Lookback = 45_TCN Prediction = 8849.42135174347\n",
+      " Lookback = 15_NBEATS Prediction = 9453.184644800358\n",
+      " Lookback = 30_NBEATS Prediction = 10074.796311120961\n",
+      " Lookback = 45_NBEATS Prediction = 8799.151215761769\n",
+      "9021.238524801314 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-04 00:00:00 current date\n",
+      "8359.648 mean\n",
+      "8319.47 self.buy_entry_price\n",
+      "7707.77 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 8097.208847816516\n",
+      " Lookback = 30_TCN Prediction = 8515.478604949221\n",
+      " Lookback = 45_TCN Prediction = 8458.313818222321\n",
+      " Lookback = 15_NBEATS Prediction = 9531.182697716313\n",
+      " Lookback = 30_NBEATS Prediction = 9348.537539629242\n",
+      " Lookback = 45_NBEATS Prediction = 10020.25563601934\n",
+      "8995.16285739216 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-05 00:00:00 current date\n",
+      "8209.594000000001 mean\n",
+      "8319.47 self.buy_entry_price\n",
+      "7824.23 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 8346.679171434567\n",
+      " Lookback = 30_TCN Prediction = 8390.041437584192\n",
+      " Lookback = 45_TCN Prediction = 8489.111795757368\n",
+      " Lookback = 15_NBEATS Prediction = 9352.68402371844\n",
+      " Lookback = 30_NBEATS Prediction = 8853.895923262347\n",
+      " Lookback = 45_NBEATS Prediction = 9439.959628199827\n",
+      "8812.061996659455 ml_pred\n",
+      "buy_to_no_position\n",
+      "Lost 495.2399999999998 on this trade\n",
+      "6 days in trade\n",
+      "Average days in trades = 6.0\n",
+      "Bat rate buy so far = 0.0\n",
+      "Win rate buy so far = 0.0\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 1, 'n_short_won': 0, 'n_buy_won': 0, '$_short_lost': 0, '$_buy_lost': 495.2399999999998, '$_short_won': 0, '$_buy_won': 0}\n",
+      "Total days in trades = 6\n",
+      "----------\n",
+      "buy\n",
+      "2019-06-09 00:00:00 current date\n",
+      "7688.08 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 7971.702217823392\n",
+      " Lookback = 30_TCN Prediction = 7785.612852782216\n",
+      " Lookback = 45_TCN Prediction = 8369.350018719735\n",
+      " Lookback = 15_NBEATS Prediction = 7919.851770129085\n",
+      " Lookback = 30_NBEATS Prediction = 8851.508360279768\n",
+      " Lookback = 45_NBEATS Prediction = 9323.80791482314\n",
+      "8370.305522426223 ml prediction day\n",
+      "7866.482000000001 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 0.8236551801363627 minutes\n",
+      "Updating stop loss to 6800.2805\n",
+      "8000.33 row close\n",
+      "Updating stop loss to 6923.981\n",
+      "8145.86 row close\n",
+      "Updating stop loss to 6996.282\n",
+      "8230.92 row close\n",
+      "Updating stop loss to 7389.755499999999\n",
+      "8693.83 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-14 00:00:00 current date\n",
+      "8199.73 mean\n",
+      "7688.08 self.buy_entry_price\n",
+      "8693.83 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 8615.355239245775\n",
+      " Lookback = 30_TCN Prediction = 7876.057025236763\n",
+      " Lookback = 45_TCN Prediction = 8712.858150631151\n",
+      " Lookback = 15_NBEATS Prediction = 9089.178384411101\n",
+      " Lookback = 30_NBEATS Prediction = 10313.117769033604\n",
+      " Lookback = 45_NBEATS Prediction = 9544.705681832069\n",
+      "9025.212041731744 ml_pred\n",
+      "Updating stop loss to 7512.622999999999\n",
+      "8838.38 row close\n",
+      "Updating stop loss to 7645.3165\n",
+      "8994.49 row close\n",
+      "Updating stop loss to 7922.2975\n",
+      "9320.35 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-17 00:00:00 current date\n",
+      "8815.594000000001 mean\n",
+      "7688.08 self.buy_entry_price\n",
+      "9320.35 current close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
