--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2561,6 +2561,36 @@
       "2020-04-15 00:00:00 current date\n",
       "6642.11 close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 6435.08629643784\n",
+      " Lookback = 30_TCN Prediction = 6671.068899298472\n",
+      " Lookback = 45_TCN Prediction = 6492.611034505189\n",
+      " Lookback = 15_NBEATS Prediction = 7046.761402877721\n",
+      " Lookback = 30_NBEATS Prediction = 7376.222465068817\n",
+      " Lookback = 45_NBEATS Prediction = 6379.0849611576705\n",
+      "6733.472509890951 ml prediction day\n",
+      "6831.95 mean\n",
+      "Eval buy took 2.741269095738729 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-04-20 00:00:00 current date\n",
+      "6881.96 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 6855.150995342785\n",
+      " Lookback = 30_TCN Prediction = 6775.769927494672\n",
+      " Lookback = 45_TCN Prediction = 6695.805451004316\n",
+      " Lookback = 15_NBEATS Prediction = 6909.613916743825\n",
+      " Lookback = 30_NBEATS Prediction = 6584.389505168596\n",
+      " Lookback = 45_NBEATS Prediction = 7303.777469167097\n",
+      "6854.084544153549 ml prediction day\n",
+      "7108.4039999999995 mean\n",
+      "Eval buy took 3.27618354956309 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-05-10 00:00:00 current date\n",
+      "8756.43 close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
