--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2,17 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "51b56636-6aec-4275-a855-237dd410abff",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Importing plotly failed. Interactive plots will not work.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -29,59 +22,229 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import sys\n",
     "\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "sys.path.insert(0,\"../\")\n",
     "\n",
+    "from app.mlcode.predict_price_movements import BollingerBandsPredictor\n",
+    "from app.mlcode.determine_trading_state import DetermineTradingState\n",
+    "from app.mlcode.utils import read_in_data, read_in_yaml, running_on_aws, setup_logging, update_yaml_config\n",
     "\n",
-    "from threading import Thread\n",
+    "%pylab inline\n",
     "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import shutil\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from tqdm import tqdm_notebook as tqdm\n",
+    "import logging\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "335ca092-bb89-4089-9dbd-0d2c048631e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup_logging() -> logging.Logger:\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
+    "    root = logging.getLogger()\n",
+    "    if root.handlers:\n",
+    "        for handler in root.handlers:\n",
+    "            root.removeHandler(handler)\n",
     "\n",
-    "from darts import TimeSeries\n",
-    "from darts.dataprocessing.transformers import Scaler\n",
-    "from darts.models import RNNModel, TCNModel, TransformerModel, NBEATSModel, BlockRNNModel\n",
-    "from darts.utils.missing_values import fill_missing_values\n",
-    "# from darts.utils.likelihood_models import GaussianLikelihoodModel\n",
+    "    logging.basicConfig(format=\"%(asctime)s: : %(funcName)s  %(message)s\", level=logging.INFO)\n",
     "\n",
-    "from darts.metrics import mape, mse\n",
-    "from darts.utils.statistics import check_seasonality, plot_acf\n",
-    "from darts.datasets import AirPassengersDataset, SunspotsDataset\n",
-    "from darts.utils.timeseries_generation import datetime_attribute_timeseries\n",
+    "    return logging.getLogger(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "922db9ec-97f3-475b-8a76-d4bb6de7aa3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger = setup_logging()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be9d87d2-a6d8-4849-bcc4-093f3d22cb81",
+   "metadata": {},
+   "source": [
+    "## Define files names to use in /notebooks directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "aa497d11-8eef-4bf7-815b-9af82cd04228",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_path = \"configs/\"\n",
+    "coin_to_predict = \"btc_\"\n",
     "\n",
-    "from math import sqrt\n",
-    "from time import time\n",
+    "constants = read_in_yaml( base_path + \"constants.yml\", running_on_aws())\n",
+    "    \n",
+    "trading_state_filename = base_path + coin_to_predict + \"trading_state_config.yml\"\n",
+    "trading_constants = read_in_yaml(trading_state_filename, running_on_aws())\n",
     "\n",
-    "from datetime import timedelta\n",
+    "won_lost_amount_filename = base_path + coin_to_predict + \"won_and_lost_config.yml\"\n",
+    "won_and_lost_amount_constants = read_in_yaml(won_lost_amount_filename, running_on_aws())\n",
+    "    \n",
     "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "import logging\n",
-    "logging.disable(logging.CRITICAL)\n",
-    "from collections import defaultdict\n",
+    "actions_to_take_filename =  base_path + coin_to_predict + \"actions_to_take.yml\"\n",
+    "actions_to_take_constants = read_in_yaml(actions_to_take_filename, running_on_aws())\n",
     "\n",
-    "from finta import TA\n",
-    "\n",
-    "\n",
-    "\n",
-    "%pylab inline"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2fc4f65b-fbfc-4183-9bad-a21c382eda2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bitcoin_df = read_in_data(\"../tmp/\" + constants[\"bitcoin_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "etherum_df = read_in_data(\"../tmp/\" +constants[\"etherum_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "sol_df = read_in_data(\"../tmp/\" +constants[\"sol_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "matic_df = read_in_data(\"../tmp/\" +constants[\"matic_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "link_df = read_in_data(\"../tmp/\" +constants[\"link_csv_filename\"].split(\"/\")[1], running_on_aws())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d045e7f9-d654-4f4e-a9f9-c703c17f629b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-03-26</th>\n",
+       "      <td>15.603500</td>\n",
+       "      <td>15.951500</td>\n",
+       "      <td>15.506500</td>\n",
+       "      <td>15.846500</td>\n",
+       "      <td>4.329742e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-27</th>\n",
+       "      <td>1.612378</td>\n",
+       "      <td>1.696156</td>\n",
+       "      <td>1.602438</td>\n",
+       "      <td>1.695952</td>\n",
+       "      <td>1.498535e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-28</th>\n",
+       "      <td>1.695952</td>\n",
+       "      <td>1.747663</td>\n",
+       "      <td>1.651217</td>\n",
+       "      <td>1.657996</td>\n",
+       "      <td>3.885142e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-29</th>\n",
+       "      <td>1.657996</td>\n",
+       "      <td>1.737373</td>\n",
+       "      <td>1.634949</td>\n",
+       "      <td>1.675019</td>\n",
+       "      <td>1.680346e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-30</th>\n",
+       "      <td>1.675019</td>\n",
+       "      <td>1.726398</td>\n",
+       "      <td>1.628389</td>\n",
+       "      <td>1.682571</td>\n",
+       "      <td>2.489822e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 open       high        low      close        volume\n",
+       "date                                                                \n",
+       "2022-03-26  15.603500  15.951500  15.506500  15.846500  4.329742e+05\n",
+       "2022-03-27   1.612378   1.696156   1.602438   1.695952  1.498535e+06\n",
+       "2022-03-28   1.695952   1.747663   1.651217   1.657996  3.885142e+06\n",
+       "2022-03-29   1.657996   1.737373   1.634949   1.675019  1.680346e+06\n",
+       "2022-03-30   1.675019   1.726398   1.628389   1.682571  2.489822e+06"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "link_df.tail()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d986f5d7-06bd-4aab-9481-8b5e7f8ee3ee",
+   "id": "bbbd4ae0-40d8-46f3-b124-1bb104ed46c8",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d986f5d7-06bd-4aab-9481-8b5e7f8ee3ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "app.mlcode.predict_price_movements.BollingerBandsPredictor"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BollingerBandsPredictor"
+   ]
   },
   {
    "cell_type": "code",
