--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -67,7 +67,10 @@
    "id": "3cf57fbf-b13e-4c99-8c9e-adfa54de30cb",
    "metadata": {},
    "source": [
-    "## Setup data"
+    "## Setup data\n",
+    "- This is all taken from /tmp which should be downloaded first using make\n",
+    "\n",
+    "`make download_configs_and_data`"
    ]
   },
   {
@@ -186,7 +189,8 @@
     "actions_to_take_filename =  base_path + coin_to_predict + \"actions_to_take.yml\"\n",
     "actions_to_take_constants = read_in_yaml(actions_to_take_filename, running_on_aws())\n",
     "\n",
-    "\n"
+    "\n",
+    "ml_constants = read_in_yaml(\"../tmp/\" +constants[\"ml_config_filename\"].split(\"/\")[1], running_on_aws())"
    ]
   },
   {
@@ -308,9 +312,7 @@
      ]
     }
    ],
-   "source": [
-    "ml_constants = read_in_yaml(\"../tmp/\" +constants[\"ml_config_filename\"].split(\"/\")[1], running_on_aws())"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
