update date assert

--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -90,29 +90,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "ba00f678-e612-400e-ae2b-de525fa7f0db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = \"configs/\"\n",
-    "coin = \"btc\"\n",
-    "coin_to_predict = coin +\"_\"\n",
+    "def config_files(base_path: str = \"configs/\", coin: str = \"btc\"):\n",
     "\n",
-    "constants = read_in_yaml( base_path + \"constants.yml\", running_on_aws())\n",
+    "    coin_to_predict = coin +\"_\"\n",
+    "\n",
+    "    constants = read_in_yaml( base_path + \"constants.yml\", running_on_aws())\n",
+    "\n",
+    "    trading_state_filename = base_path + coin_to_predict + \"trading_state_config.yml\"\n",
+    "    trading_constants = read_in_yaml(trading_state_filename, running_on_aws())\n",
+    "\n",
+    "    won_lost_amount_filename = base_path + coin_to_predict + \"won_and_lost_config.yml\"\n",
+    "    won_and_lost_amount_constants = read_in_yaml(won_lost_amount_filename, running_on_aws())\n",
+    "\n",
+    "\n",
+    "    actions_to_take_filename =  base_path + coin_to_predict + \"actions_to_take.yml\"\n",
+    "    actions_to_take_constants = read_in_yaml(actions_to_take_filename, running_on_aws())\n",
+    "\n",
+    "    ml_constants = read_in_yaml(base_path +constants[\"ml_config_filename\"].split(\"/\")[1], running_on_aws())\n",
     "    \n",
-    "trading_state_filename = base_path + coin_to_predict + \"trading_state_config.yml\"\n",
-    "trading_constants = read_in_yaml(trading_state_filename, running_on_aws())\n",
-    "\n",
-    "won_lost_amount_filename = base_path + coin_to_predict + \"won_and_lost_config.yml\"\n",
-    "won_and_lost_amount_constants = read_in_yaml(won_lost_amount_filename, running_on_aws())\n",
-    "    \n",
-    "\n",
-    "actions_to_take_filename =  base_path + coin_to_predict + \"actions_to_take.yml\"\n",
-    "actions_to_take_constants = read_in_yaml(actions_to_take_filename, running_on_aws())\n",
-    "\n",
-    "\n",
-    "ml_constants = read_in_yaml(base_path +constants[\"ml_config_filename\"].split(\"/\")[1], running_on_aws())"
+    "    return coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "cee4b4dd-f06c-4e88-9fad-2f925cf2cd88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants = config_files(coin=\"btc\")"
    ]
   },
   {
@@ -375,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "696c1031-adb1-4489-84a7-8d9e109f859f",
    "metadata": {},
    "outputs": [
@@ -383,39 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.05\n",
-      " Pct complete = 0.06\n",
-      " Pct complete = 0.06\n",
-      " Pct complete = 0.06\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/0r/jkhwtgvx0wb9vrk6xn4bmz2m0000gn/T/ipykernel_54285/3015767556.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m         )\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mprice_prediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredictor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         trading_state_class = DetermineTradingState(\n",
-      "\u001b[0;32m~/GitHub/go-trader/app/mlcode/predict_price_movements.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    413\u001b[0m         \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Training models\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    414\u001b[0m         \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 415\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_train_models\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_close_series\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mts_stacked_series\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    416\u001b[0m         \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"making predictions\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    417\u001b[0m         \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/GitHub/go-trader/app/mlcode/predict_price_movements.py\u001b[0m in \u001b[0;36m_train_models\u001b[0;34m(self, train_close_series, ts_stacked_series)\u001b[0m\n\u001b[1;32m    377\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdict_of_threads\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    378\u001b[0m             \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Have thread = {k}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 379\u001b[0;31m             \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    380\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    381\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_make_prediction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_close_series\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTimeSeries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mts_stacked_series\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTimeSeries\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/3.8.2/lib/python3.8/threading.py\u001b[0m in \u001b[0;36mjoin\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1009\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1010\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1011\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wait_for_tstate_lock\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1012\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1013\u001b[0m             \u001b[0;31m# the behavior of a negative timeout isn't documented, but\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.pyenv/versions/3.8.2/lib/python3.8/threading.py\u001b[0m in \u001b[0;36m_wait_for_tstate_lock\u001b[0;34m(self, block, timeout)\u001b[0m\n\u001b[1;32m   1025\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlock\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# already determined that the C code is done\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1026\u001b[0m             \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_stopped\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1027\u001b[0;31m         \u001b[0;32melif\u001b[0m \u001b[0mlock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblock\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1028\u001b[0m             \u001b[0mlock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelease\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1029\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      " Pct complete = 0.05\n"
      ]
     }
    ],
@@ -428,6 +407,9 @@
     "        print(f\" Pct complete = {day_idx/len(bitcoin_df):.2f}\")\n",
     "        new_bitcoin_df = bitcoin_df[bitcoin_df.index <= day]\n",
     "        new_etherum_df = etherum_df[etherum_df.index <= day]\n",
+    "        # read in the new config files in case the yhave been updated\n",
+    "        coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants = config_files(coin=\"btc\")\n",
+    "        \n",
     "        predictor = CoinPricePredictor(\n",
     "            coin, constants, ml_constants, new_bitcoin_df, additional_dfs=[new_etherum_df], verbose=False  # spy_df\n",
     "        )\n",
