--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def config_files(base_path: str = \"configs/\", coin: str = \"btc\"):\n",
+    "def read_in_config_files(base_path: str = \"configs/\", coin: str = \"btc\"):\n",
     "\n",
     "    coin_to_predict = coin +\"_\"\n",
     "\n",
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants = config_files(coin=\"btc\")"
+    "coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants = read_in_config_files(coin=\"btc\")"
    ]
   },
   {
@@ -394,6 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " Pct complete = 0.05\n",
       " Pct complete = 0.05\n"
      ]
     }
@@ -408,7 +409,7 @@
     "        new_bitcoin_df = bitcoin_df[bitcoin_df.index <= day]\n",
     "        new_etherum_df = etherum_df[etherum_df.index <= day]\n",
     "        # read in the new config files in case the yhave been updated\n",
-    "        coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants = config_files(coin=\"btc\")\n",
+    "        coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants = read_in_config_files(coin=\"btc\")\n",
     "        \n",
     "        predictor = CoinPricePredictor(\n",
     "            coin, constants, ml_constants, new_bitcoin_df, additional_dfs=[new_etherum_df], verbose=False  # spy_df\n",
