more date testing

--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -395,6 +395,10 @@
      "output_type": "stream",
      "text": [
       " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
       " Pct complete = 0.05\n"
      ]
     }
