more date logic

--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -399,6 +399,7 @@
       " Pct complete = 0.05\n",
       " Pct complete = 0.05\n",
       " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
       " Pct complete = 0.05\n"
      ]
     }
