--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -400,6 +400,9 @@
       " Pct complete = 0.05\n",
       " Pct complete = 0.05\n",
       " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
       " Pct complete = 0.05\n"
      ]
     }
