final testing date logic

--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -403,6 +403,8 @@
       " Pct complete = 0.05\n",
       " Pct complete = 0.05\n",
       " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
       " Pct complete = 0.05\n"
      ]
     }
