more testing logic

--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -405,6 +405,8 @@
       " Pct complete = 0.05\n",
       " Pct complete = 0.05\n",
       " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
+      " Pct complete = 0.05\n",
       " Pct complete = 0.05\n"
      ]
     }
