more work on saving predictions, need tot test next

--- a/notebooks/coinbase_api.ipynb
+++ b/notebooks/coinbase_api.ipynb
@@ -22,9 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.expanduser(\"~/.ssh/go_trader_coinbase_key.yml\"), 'r') as stream:\n",
+    "with open(os.path.expanduser(\"~/.ssh/go_trader_coinbase_key.yml\"), \"r\") as stream:\n",
     "    try:\n",
-    "        coinbase_tokens = yaml.safe_load(stream)['coinbase']\n",
+    "        coinbase_tokens = yaml.safe_load(stream)[\"coinbase\"]\n",
     "    except yaml.YAMLError as exc:\n",
     "        print(exc)"
    ]
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(api_key=coinbase_tokens['passphrase'], api_secret=coinbase_tokens['api_secret'])"
+    "client = Client(api_key=coinbase_tokens[\"passphrase\"], api_secret=coinbase_tokens[\"api_secret\"])"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# authenticate\n",
-    "auth_client = cbpro.AuthenticatedClient('gotrader',coinbase_tokens['api_secret'],coinbase_tokens['passphrase'])"
+    "auth_client = cbpro.AuthenticatedClient(\"gotrader\", coinbase_tokens[\"api_secret\"], coinbase_tokens[\"passphrase\"])"
    ]
   },
   {
@@ -124,19 +124,21 @@
     "        self.products = [\"LTC-USD\"]\n",
     "        self.message_count = 0\n",
     "        print(\"Lets count the messages!\")\n",
+    "\n",
     "    def on_message(self, msg):\n",
     "        self.message_count += 1\n",
-    "        if 'price' in msg and 'type' in msg:\n",
-    "            print (\"Message type:\", msg[\"type\"],\n",
-    "                   \"\\t@ {:.3f}\".format(float(msg[\"price\"])))\n",
+    "        if \"price\" in msg and \"type\" in msg:\n",
+    "            print(\"Message type:\", msg[\"type\"], \"\\t@ {:.3f}\".format(float(msg[\"price\"])))\n",
+    "\n",
     "    def on_close(self):\n",
     "        print(\"-- Goodbye! --\")\n",
+    "\n",
     "\n",
     "wsClient = myWebsocketClient()\n",
     "wsClient.start()\n",
     "print(wsClient.url, wsClient.products)\n",
-    "while (wsClient.message_count < 500):\n",
-    "    print (\"\\nmessage_count =\", \"{} \\n\".format(wsClient.message_count))\n",
+    "while wsClient.message_count < 500:\n",
+    "    print(\"\\nmessage_count =\", \"{} \\n\".format(wsClient.message_count))\n",
     "    time.sleep(1)\n",
     "wsClient.close()"
    ]
@@ -164,7 +166,8 @@
    ],
    "source": [
     "import cbpro, time\n",
-    "order_book = cbpro.OrderBook(product_id='BTC-USD')\n",
+    "\n",
+    "order_book = cbpro.OrderBook(product_id=\"BTC-USD\")\n",
     "order_book.start()\n",
     "time.sleep(10)\n",
     "order_book.close()"
@@ -179,7 +182,7 @@
    "source": [
     "# [ time, low, high, open, close, volume ]\n",
     "# granularity = day\n",
-    "historic_rates = auth_client.get_product_historic_rates(product_id='BTC-USD', granularity=86400)"
+    "historic_rates = auth_client.get_product_historic_rates(product_id=\"BTC-USD\", granularity=86400)"
    ]
   },
   {
@@ -238,7 +241,7 @@
     }
    ],
    "source": [
-    "pd.to_datetime(historic_rates[0][0], unit='s')"
+    "pd.to_datetime(historic_rates[0][0], unit=\"s\")"
    ]
   },
   {
@@ -259,7 +262,7 @@
     }
    ],
    "source": [
-    "pd.to_datetime(1630886400, unit='s')"
+    "pd.to_datetime(1630886400, unit=\"s\")"
    ]
   },
   {
@@ -280,7 +283,7 @@
     }
    ],
    "source": [
-    "pd.to_datetime(1630800000, unit='s')"
+    "pd.to_datetime(1630800000, unit=\"s\")"
    ]
   },
   {
@@ -301,7 +304,7 @@
     }
    ],
    "source": [
-    "pd.to_datetime(1630713600, unit='s')"
+    "pd.to_datetime(1630713600, unit=\"s\")"
    ]
   },
   {
