--- a/notebooks/saving_and_loading_darts_models.ipynb
+++ b/notebooks/saving_and_loading_darts_models.ipynb
@@ -61,8 +61,10 @@
     "from datetime import timedelta\n",
     "\n",
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import logging\n",
+    "\n",
     "logging.disable(logging.CRITICAL)\n",
     "\n",
     "%pylab inline"
@@ -75,19 +77,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deeptcn= TCNModel(\n",
-    "                            dropout=.1,\n",
-    "                            random_state=0,\n",
-    "                                dilation_base=2, \n",
-    "                            weight_norm=True,\n",
-    "                            kernel_size=30,\n",
-    "                            num_filters=6,\n",
-    "                            num_layers=6,\n",
-    "                            input_chunk_length=31,\n",
-    "                            output_chunk_length=30,\n",
-    "                        model_name = str(31) + \"_tcn\",\n",
-    "                        force_reset=True,\n",
-    "                        log_tensorboard=True)"
+    "deeptcn = TCNModel(\n",
+    "    dropout=0.1,\n",
+    "    random_state=0,\n",
+    "    dilation_base=2,\n",
+    "    weight_norm=True,\n",
+    "    kernel_size=30,\n",
+    "    num_filters=6,\n",
+    "    num_layers=6,\n",
+    "    input_chunk_length=31,\n",
+    "    output_chunk_length=30,\n",
+    "    model_name=str(31) + \"_tcn\",\n",
+    "    force_reset=True,\n",
+    "    log_tensorboard=True,\n",
+    ")"
    ]
   },
   {
@@ -115,7 +118,7 @@
     }
    ],
    "source": [
-    "deeptcn.load_from_checkpoint(model_name = str(31) + \"_tcn\",best=False)"
+    "deeptcn.load_from_checkpoint(model_name=str(31) + \"_tcn\", best=False)"
    ]
   },
   {
