--- a/notebooks/training_from_python_code.ipynb
+++ b/notebooks/training_from_python_code.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "import sys\n",
     "\n",
-    "sys.path.insert(0,\"../\")\n",
+    "sys.path.insert(0, \"../\")\n",
     "\n",
     "from app.mlcode.predict_price_movements import CoinPricePredictor\n",
     "from app.mlcode.determine_trading_state import DetermineTradingState\n",
@@ -51,13 +51,16 @@
     "import logging\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
+    "\n",
     "tqdm.pandas()\n",
     "\n",
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "logger.setLevel(logging.CRITICAL)\n",
     "\n",
-    "import warnings; warnings.simplefilter('ignore')\n"
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter(\"ignore\")"
    ]
   },
   {
@@ -67,7 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "logging.disable(sys.maxsize)"
    ]
   },
@@ -97,9 +99,9 @@
    "source": [
     "def read_in_config_files(base_path: str = \"configs/\", coin: str = \"btc\"):\n",
     "\n",
-    "    coin_to_predict = coin +\"_\"\n",
+    "    coin_to_predict = coin + \"_\"\n",
     "\n",
-    "    constants = read_in_yaml( base_path + \"constants.yml\", running_on_aws())\n",
+    "    constants = read_in_yaml(base_path + \"constants.yml\", running_on_aws())\n",
     "\n",
     "    trading_state_filename = base_path + coin_to_predict + \"trading_state_config.yml\"\n",
     "    trading_constants = read_in_yaml(trading_state_filename, running_on_aws())\n",
@@ -107,13 +109,12 @@
     "    won_lost_amount_filename = base_path + coin_to_predict + \"won_and_lost_config.yml\"\n",
     "    won_and_lost_amount_constants = read_in_yaml(won_lost_amount_filename, running_on_aws())\n",
     "\n",
-    "\n",
-    "    actions_to_take_filename =  base_path + coin_to_predict + \"actions_to_take.yml\"\n",
+    "    actions_to_take_filename = base_path + coin_to_predict + \"actions_to_take.yml\"\n",
     "    actions_to_take_constants = read_in_yaml(actions_to_take_filename, running_on_aws())\n",
     "\n",
-    "    ml_constants = read_in_yaml(base_path +constants[\"ml_config_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "    \n",
-    "    return coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants"
+    "    ml_constants = read_in_yaml(base_path + constants[\"ml_config_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "\n",
+    "    return coin, constants, trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants"
    ]
   },
   {
@@ -123,7 +124,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants = read_in_config_files(coin=\"btc\")"
+    "(\n",
+    "    coin,\n",
+    "    constants,\n",
+    "    trading_constants,\n",
+    "    won_and_lost_amount_constants,\n",
+    "    actions_to_take_constants,\n",
+    "    ml_constants,\n",
+    ") = read_in_config_files(coin=\"btc\")"
    ]
   },
   {
@@ -151,9 +159,9 @@
     }
    ],
    "source": [
-    "trading_constants # ensure all zeros\n",
-    "assert trading_constants['buy_entry_price'] == 0\n",
-    "assert trading_constants['position_entry_date'] == None\n",
+    "trading_constants  # ensure all zeros\n",
+    "assert trading_constants[\"buy_entry_price\"] == 0\n",
+    "assert trading_constants[\"position_entry_date\"] == None\n",
     "trading_constants"
    ]
   },
@@ -202,10 +210,10 @@
    "outputs": [],
    "source": [
     "bitcoin_df = read_in_data(\"../tmp/\" + constants[\"bitcoin_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "etherum_df = read_in_data(\"../tmp/\" +constants[\"etherum_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "sol_df = read_in_data(\"../tmp/\" +constants[\"sol_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "matic_df = read_in_data(\"../tmp/\" +constants[\"matic_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
-    "link_df = read_in_data(\"../tmp/\" +constants[\"link_csv_filename\"].split(\"/\")[1], running_on_aws())"
+    "etherum_df = read_in_data(\"../tmp/\" + constants[\"etherum_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "sol_df = read_in_data(\"../tmp/\" + constants[\"sol_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "matic_df = read_in_data(\"../tmp/\" + constants[\"matic_csv_filename\"].split(\"/\")[1], running_on_aws())\n",
+    "link_df = read_in_data(\"../tmp/\" + constants[\"link_csv_filename\"].split(\"/\")[1], running_on_aws())"
    ]
   },
   {
@@ -332,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_lookback = np.max(ml_constants['prediction_params']['lookback_window']) # days"
+    "max_lookback = np.max(ml_constants[\"prediction_params\"][\"lookback_window\"])  # days"
    ]
   },
   {
@@ -867,17 +875,22 @@
     }
    ],
    "source": [
+    "for day_idx, day in enumerate(bitcoin_df.index):\n",
     "\n",
-    "for  day_idx, day in enumerate(bitcoin_df.index):\n",
-    "    \n",
-    "\n",
-    "    if (day_idx ) > max_lookback*2:\n",
+    "    if (day_idx) > max_lookback * 2:\n",
     "        print(f\" Pct complete = {day_idx/len(bitcoin_df):.2f}\")\n",
     "        new_bitcoin_df = bitcoin_df[bitcoin_df.index <= day]\n",
     "        new_etherum_df = etherum_df[etherum_df.index <= day]\n",
     "        # read in the new config files in case the yhave been updated\n",
-    "        coin, constants , trading_constants, won_and_lost_amount_constants, actions_to_take_constants, ml_constants = read_in_config_files(coin=\"btc\")\n",
-    "        \n",
+    "        (\n",
+    "            coin,\n",
+    "            constants,\n",
+    "            trading_constants,\n",
+    "            won_and_lost_amount_constants,\n",
+    "            actions_to_take_constants,\n",
+    "            ml_constants,\n",
+    "        ) = read_in_config_files(coin=\"btc\")\n",
+    "\n",
     "        predictor = CoinPricePredictor(\n",
     "            coin, constants, ml_constants, new_bitcoin_df, additional_dfs=[new_etherum_df], verbose=False  # spy_df\n",
     "        )\n",
@@ -893,7 +906,7 @@
     "            won_and_lost_amount_constants,\n",
     "            actions_to_take_constants,\n",
     "            running_on_aws(),\n",
-    "            is_training=True\n",
+    "            is_training=True,\n",
     "        )\n",
     "        # TODO: read in yaml files again\n",
     "        sys.stdout.flush()\n",
@@ -901,18 +914,16 @@
     "        logger.info(\"---- Finished determinig trading strategy --- \")\n",
     "        trading_state_class.update_state()\n",
     "        # this works\n",
-    "        if trading_state_class.actions_to_take_constants['action_to_take'] != 'none_to_none':\n",
-    "            print(trading_state_class.trading_state_constants, 'trading_state_class.trading_state_constants')\n",
-    "            print(trading_state_class.actions_to_take_constants, 'trading_state_class.actions_to_take_constants')\n",
+    "        if trading_state_class.actions_to_take_constants[\"action_to_take\"] != \"none_to_none\":\n",
+    "            print(trading_state_class.trading_state_constants, \"trading_state_class.trading_state_constants\")\n",
+    "            print(trading_state_class.actions_to_take_constants, \"trading_state_class.actions_to_take_constants\")\n",
     "\n",
     "        update_yaml_config(trading_state_filename, trading_state_class.trading_state_constants, running_on_aws())\n",
     "        logger.info(\"---- Updated trading state config --- \")\n",
     "        update_yaml_config(won_lost_amount_filename, trading_state_class.won_and_lose_amount_dict, running_on_aws())\n",
     "        logger.info(\"---- Updated win/lost state config --- \")\n",
     "        update_yaml_config(actions_to_take_filename, trading_state_class.actions_to_take_constants, running_on_aws())\n",
-    "        logger.info(\"---- Updated actions to take state config --- \")\n",
-    "        \n",
-    "        "
+    "        logger.info(\"---- Updated actions to take state config --- \")"
    ]
   },
   {
